<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InformationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/web_version"
        android:textSize="20sp"
        android:fontFamily="@font/manrope_semibold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/urlWebapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/url_web_app"
        android:textStyle=""
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:fontFamily="@font/manrope_semibold"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/manufacturer"
        android:textSize="20sp"
        android:fontFamily="@font/manrope_semibold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/urlMaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/url_maker"
        android:textStyle=""
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:fontFamily="@font/manrope_semibold"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/last_update"
        android:textSize="20sp"
        android:fontFamily="@font/manrope_semibold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/urlUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/url_update"
        android:textStyle=""
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:fontFamily="@font/manrope_semibold"
        android:layout_gravity="center"/>

</LinearLayout>